--- a/s2t/frontend/index.html
+++ b/s2t/frontend/index.html
@@ -20,9 +20,10 @@
     const output = document.getElementById("output");
 
     const metadata = {
-      sessionId: "rakathon-2025-session-001",
-      sessionDate: new Date().toISOString(),
-      userId: "001"
+      meetingId: "1",
+      uploadedById: 1,
+      caseId: "1",
+      timestamp: new Date().toISOString()
     };
 
     document.getElementById("start").onclick = async () => {
